# internal/interfaces/http/product/response.go
@@ -1,0 +1,8 @@
+package http_interfaces_product
+
+type ProductResponse struct {
+	ID          uint    `json:"id"`
+	Name        string  `json:"name"`
+	Price       float64 `json:"price"`
+	Description string  `json:"description"`
+}
