# internal/interfaces/http/tab/response.go
@@ -1,0 +1,7 @@
+package http_interfaces_tab
+
+type TabResponse struct {
+	ID    uint   `json:"id"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
